--- a/frontendTFM/src/app/login/login.component.html
+++ b/frontendTFM/src/app/login/login.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-dark" [disabled]="!f.valid">Iniciar sesión</button>
-        <div *ngIf="f.submitted && isLoginFail" class="alert alert-danger mt-3">Usuario o contraseña incorrectos: {{ errorMsg }}</div>
+        <div *ngIf="f.submitted && isLoginFail" class="alert alert-danger mt-3">Usuario o contraseña incorrectos.</div>
       </div>
     </form>
   </div>
