--- a/frontendTFM/src/app/user/user.component.html
+++ b/frontendTFM/src/app/user/user.component.html
@@ -147,7 +147,7 @@
         <div class="form-group" *ngIf="varAux===1">
           <label for="constructos2">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos2" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos2" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -174,7 +174,7 @@
         <div class="form-group" *ngIf="varAux===2">
           <label for="constructos3">{{constructos[varAux].txtpregunta}} </label>
          <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos3" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos3" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -201,7 +201,7 @@
         <div class="form-group" *ngIf="varAux===3">
           <label for="constructos4">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos4" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos4" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -228,7 +228,7 @@
         <div class="form-group" *ngIf="varAux==4">
           <label for="constructos5">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos5" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos5" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -255,7 +255,7 @@
         <div class="form-group" *ngIf="varAux===5">
           <label for="constructos6">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos6" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos6" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -282,7 +282,7 @@
         <div class="form-group" *ngIf="varAux==6">
           <label for="constructos7">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos7" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos7" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -309,7 +309,7 @@
         <div class="form-group" *ngIf="varAux===7">
           <label for="constructos8">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos8" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos8" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -336,7 +336,7 @@
         <div class="form-group" *ngIf="varAux==8">
           <label for="constructos9">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos9" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos9" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -363,7 +363,7 @@
         <div class="form-group" *ngIf="varAux===9">
           <label for="constructos10">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos10" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos10" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -391,7 +391,7 @@
         <div class="form-group" *ngIf="varAux==10">
           <label for="constructos11">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos11" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos11" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -418,7 +418,7 @@
         <div class="form-group" *ngIf="varAux===11">
           <label for="constructos12">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos12" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos12" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -445,7 +445,7 @@
         <div class="form-group" *ngIf="varAux==12">
           <label for="constructos113">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos13" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos13" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
             <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -472,7 +472,7 @@
         <div class="form-group" *ngIf="varAux===13">
           <label for="constructos14">{{constructos[varAux].txtpregunta}} </label>
           <div  *ngIf="parecidos"> 
-          <input type="text" class="form-control" name="constructos14" [(ngModel)]="constructosUsuario[varAux]" autocomplete="off"
+          <input type="text" class="form-control" name="constructos14" [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off"
             required></div>
             <div *ngIf="!segundaPregunta">
                 <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
@@ -491,7 +491,6 @@
                  <p>{{preguntasPolos[this.varAux].preg2}}</p>
                  <input type="text" class="form-control" name="poloDerecho14" [(ngModel)]="poloDerecho[varAux]" autocomplete="off"
                  required>
-                 <button class="btn btn-dark" (click)=incrementarVar()>Siguiente</button>
                </div>
              </div>
        
