--- a/frontendTFM/src/app/user/user.component-ORIGINAL.html
+++ b/frontendTFM/src/app/user/user.component-ORIGINAL.html
@@ -28,13 +28,77 @@
    <div class="card">
       <div class="card-body">
          <form name="form" #f="ngForm" novalidate (ngSubmit)="guardar()">
-            <div class="form-group" *ngFor='let num of [3,4,5,6,7,8,9,10,11]'>
-               <label for="'elemento'+num">{{elementos[num-1].descripcion}} </label>
-               <input type="text" class="form-control" name="elemento+{{num}}" [(ngModel)]="elementos['nombre'+num]"
+            <div class="form-group">
+               <label for="elemento3">{{elementos[2].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento3" [(ngModel)]="elementos.nombre3"
                   autocomplete="off" required>
-               <label for="'descripcion'+num">Descripción:</label>
-               <input type="text" class="form-control" name="descripcion+{{num}}"
-                  [(ngModel)]="elementos['descripcionUsuario'+num]" autocomplete="off">
+               <label for="descripcion3">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion3" [(ngModel)]="elementos.descripcionUsuario3"
+                  autocomplete="off">
+            </div>
+            <div class="form-group">
+               <label for="elemento4">{{elementos[3].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento4" [(ngModel)]="elementos.nombre4"
+                  autocomplete="off" required>
+               <label for="descripcion1¡4">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion4" [(ngModel)]="elementos.descripcionUsuario4"
+                  autocomplete="off" required>
+            </div>
+            <div class="form-group">
+               <label for="elemento5">{{elementos[4].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento5" [(ngModel)]="elementos.nombre5"
+                  autocomplete="off" required>
+               <label for="descripcion5">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion5" [(ngModel)]="elementos.descripcionUsuario5"
+                  autocomplete="off" required>
+            </div>
+            <div class="form-group">
+               <label for="elemento6">{{elementos[5].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento6" [(ngModel)]="elementos.nombre6"
+                  autocomplete="off" required>
+               <label for="descripcion6">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion6" [(ngModel)]="elementos.descripcionUsuario6"
+                  autocomplete="off" required>
+            </div>
+            <div class="form-group">
+               <label for="elemento7">{{elementos[6].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento7" [(ngModel)]="elementos.nombre7"
+                  autocomplete="off" required>
+               <label for="descripcion7">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion7" [(ngModel)]="elementos.descripcionUsuario7"
+                  autocomplete="off">
+            </div>
+            <div class="form-group">
+               <label for="elemento8">{{elementos[7].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento8" [(ngModel)]="elementos.nombre8"
+                  autocomplete="off" required>
+               <label for="descripcion8">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion8" [(ngModel)]="elementos.descripcionUsuario8"
+                  autocomplete="off">
+            </div>
+            <div class="form-group">
+               <label for="elemento9">{{elementos[8].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento9" [(ngModel)]="elementos.nombre9"
+                  autocomplete="off" required>
+               <label for="descripcion9">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion9" [(ngModel)]="elementos.descripcionUsuario9"
+                  autocomplete="off">
+            </div>
+            <div class="form-group">
+               <label for="elemento10">{{elementos[9].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento10" [(ngModel)]="elementos.nombre10"
+                  autocomplete="off" required>
+               <label for="descripcion10">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion10" [(ngModel)]="elementos.descripcionUsuario10"
+                  autocomplete="off">
+            </div>
+            <div class="form-group">
+               <label for="elemento11">{{elementos[10].descripcion}} </label>
+               <input type="text" class="form-control" name="elemento11" [(ngModel)]="elementos.nombre11"
+                  autocomplete="off" required>
+               <label for="descripcion11">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion11" [(ngModel)]="elementos.descripcionUsuario11"
+                  autocomplete="off">
             </div>
 
             <div class="form-group">
