--- a/frontendTFM/src/app/constructos/constructos.component.html
+++ b/frontendTFM/src/app/constructos/constructos.component.html
@@ -2,6 +2,85 @@
 <div class="card">
     <div class="card-body">
         <form name="form" #f="ngForm" novalidate (ngSubmit)="guardarConstructos()">
+            <div *ngIf="bConstructosIniciados">
+                <div class="form-group" *ngFor='let num of [0,1,2,3,4,5,6,7,8,9,10,11,12,13]'>
+                    <label for="'constructos'+num">{{constructos[num].txtpregunta}} </label>
+
+                    <div *ngIf="constructos[num].tipopregunta == 'Parecidos'">
+                        <p>{{constructos[num].preguntaAux1}}</p>
+                        <input type="text" class="form-control" name="constructos+{{num}}"
+                            [(ngModel)]="poloIzquierdo[num]" autocomplete="off" required>
+
+                        <p>{{constructos[num].preguntaAux2}} {{poloIzquierdo[num]}}:</p>
+                        <input type="text" class="form-control" name="poloDerecho+{{num}}"
+                            [(ngModel)]="poloDerecho[num]" autocomplete="off" required>
+                        <br>
+                    </div>
+
+                    <div *ngIf="constructos[num].tipopregunta == 'Diferencias'">
+                        <p>{{constructos[num].preguntaAux1}}</p>
+                        <input type="text" class="form-control" name="poloIzquierdo+{{num}}"
+                            [(ngModel)]="poloIzquierdo[num]" autocomplete="off" required>
+
+                        <p>{{constructos[num].preguntaAux2}}</p>
+                        <input type="text" class="form-control" name="poloDerecho+{{num}}"
+                            [(ngModel)]="poloDerecho[num]" autocomplete="off" required>
+                        <br>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <button type="submit" class="btn btn-dark" [disabled]="!f.valid">Guardar Constructos</button>
+                <div *ngIf="f.submitted" class="alert alert-danger mt-3">Debe de introducir todos los
+                    constructos
+                </div>
+            </div>
+
+            <!-- 
+            <div class="form-group" *ngIf="varAux<= 13">
+                <label for="constructos+{{varAux}}">{{constructos[varAux].txtpregunta}} </label>
+                <div *ngIf="parecidos">
+                    <input type="text" class="form-control" name="constructos+{{varAux}}"
+                        [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off" required>
+                </div>
+                <div *ngIf="!segundaPregunta">
+                    <button class="btn btn-dark" (click)=incrementarVar() [disabled]="!f.valid">Siguiente</button>
+                </div>
+
+                <div *ngIf="segundaPregunta">
+                    <div *ngIf="parecidos">
+                        <p>{{preguntasPolos[this.varAux].preg1}}</p>
+                        <input type="text" class="form-control" name="poloDerecho+{{varAux}}"
+                            [(ngModel)]="poloDerecho[varAux]" autocomplete="off" required>
+                        <button class="btn btn-dark" (click)=incrementarVar() [disabled]="!f.valid">Siguiente</button>
+                    </div>
+
+                    <div *ngIf="diferencias">
+                        <p>{{preguntasPolos[this.varAux].preg1}}</p>
+                        <input type="text" class="form-control" name="poloIzquierdo+{{varAux}}"
+                            [(ngModel)]="poloIzquierdo[varAux]" autocomplete="off" required>
+                        <p>{{preguntasPolos[this.varAux].preg2}}</p>
+                        <input type="text" class="form-control" name="poloDerecho+{{varAux}}"
+                            [(ngModel)]="poloDerecho[varAux]" autocomplete="off" required>
+                        <button *ngIf="varAux!= 13" class="btn btn-dark" (click)=incrementarVar()
+                            [disabled]="!f.valid">Siguiente</button>
+                    </div>
+                </div>                
+            </div>
+
+            <div *ngIf="varAux===13" class="form-group">
+                <button type="submit" class="btn btn-dark" [disabled]="!f.valid">Guardar Constructos</button>
+                <div *ngIf="f.submitted" class="alert alert-danger mt-3">Debe de introducir todos los
+                    elementos
+                </div>
+            </div>
+            -->
+        </form>
+
+
+
+        <!-- <form name="form" #f="ngForm" novalidate (ngSubmit)="guardarConstructos()">
             <div class="form-group" *ngIf="varAux<= 13">
                 <label for="constructos+{{varAux}}">{{constructos[varAux].txtpregunta}} </label>
                 <div *ngIf="parecidos">
@@ -39,6 +118,6 @@
                     elementos
                 </div>
             </div>
-        </form>
+        </form> -->
     </div>
 </div>
