--- a/frontendTFM/src/app/admin/admin.component.html
+++ b/frontendTFM/src/app/admin/admin.component.html
@@ -17,3 +17,65 @@
         </ul>
         </div>
     </nav>
+    <div id="inicio">
+        <h1>Pacientes</h1>
+       <div id="usuarios" *ngFor="let usuario of usuarios;let indiceUsuario=index">
+        <p class="titulo">{{usuario.nombreUsuario}}<mat-icon (click)=mostrarUsuarios(indiceUsuario)
+            class="mat-icon-rtl-mirror">{{mostrarUsuario[indiceUsuario]? 'chevron_right' : 'expand_more'}}
+         </mat-icon>  
+      </p>
+        <div id="primeraRama" [hidden]="mostrarUsuario[indiceUsuario]">
+        <label>Lista de Rejillas</label>
+        <div *ngFor="let info of resultadoRejillas;let indice=index" >
+     <div *ngIf="usuario.id===info.idpaciente">
+           <p class="principal"> {{info.idrejilla}} <mat-icon (click)=mostrarRejilla(info.idrejilla)
+                 class="mat-icon-rtl-mirror">{{info.idrejilla}} {{info.isShow ? 'chevron_right' : 'expand_more'}} </mat-icon>
+           </p>
+     
+           <div id="segundaRama" [hidden]="info.isShow">
+              <p id="resumen">Resumen rejilla</p>
+              <p class="elementoResumen">Elementos<mat-icon (click)=mostrarElementos(info.idrejilla)
+                    class="mat-icon-rtl-mirror">{{info.idrejilla}} {{info.mostrarElementos? 'chevron_right' : 'expand_more'}}
+                 </mat-icon>
+              </p>
+              <div [hidden]="info.isShowElementos" *ngFor="let elemento of info.elementos">
+                 <p class="elementoResumen2">Elemento</p>
+                 <p class="resultadoResumen">Nombre Elemento:</p>
+                 <p class="resultadoResumen">{{elemento.nombreelemento}}</p>
+                 <p class="resultadoResumen">Rol Elemento:</p>
+                 <p class="resultadoResumen">{{elemento.rolelemento}}</p>
+              </div>
+              <p class="elementoResumen">Constructos <mat-icon (click)=mostrarConstructos(info.idrejilla)
+                    class="mat-icon-rtl-mirror">{{info.idrejilla}}
+                    {{info.isShowConstructos ? 'chevron_right' : 'expand_more'}} </mat-icon>
+              </p>
+              <div [hidden]="info.isShowConstructos" *ngFor="let constructo of info.constructos">
+                 <p class="elementoResumen2">Constructo</p>
+                 <p class="resultadoResumen">{{constructo.idconstructo}}</p>
+                 <p class="resultadoResumen">Polo izquierdo:</p>
+                 <p class="resultadoResumen">{{constructo.txtpoloizq}}</p>
+                 <p class="resultadoResumen">Polo derecho:</p>
+                 <p class="resultadoResumen">{{constructo.txtpoloder}}</p>
+              </div>
+              <p class="elementoResumen">Fecha de inicio</p>
+              <p class="resultadoResumen">{{info.fechahora| date:'medium'}}</p>
+              <p class="elementoResumen">Fecha de finalización</p>
+             
+              <p class="resultadoResumen">{{info.fechahorafin | date:'medium'}}</p>
+              <p class="elementoResumen">Comentario: </p>
+              <p class="resultadoResumen">{{info.comentariopaciente}}</p>
+              <p class="elementoResumen">Evaluaciones: </p>
+              <div *ngFor="let evaluacion of  info.evaluaciones;let indiceEvaluaciones=index">
+                 <p (click)=showRejillaCompleta(indiceEvaluaciones,indice) class="resultadoResumen">
+                    {{evaluacion.idevaluacion}} </p>
+               <div *ngIf="info.isShowEvaluaciones[indiceEvaluaciones]">
+                    <app-mostrar-rejilla [idEvaluacion]="evaluacion.idevaluacion" [elementosInicio]="info.elementos"[polosInicio]="info.constructos"></app-mostrar-rejilla>
+                </div>
+              </div>
+           </div>
+        </div>
+    </div>
+        </div>
+    </div>
+     </div>
+     
