--- a/frontendTFM/src/app/puntuar-rejilla/puntuar-rejilla.component.html
+++ b/frontendTFM/src/app/puntuar-rejilla/puntuar-rejilla.component.html
@@ -8,7 +8,7 @@
             <th scope="col"></th>
             <th scope="col">Polo izquierdo</th>
             <th scope="col">Polo derecho</th>
-            <th scope="col" *ngFor='let num of [0,1,2,3,4,5,6,7,8,9,10,11]' ><p class="vertical">{{elementosUsuario[num].nombre}}</p></th>
+            <th scope="col" *ngFor='let num of [0,1,2,3,4,5,6,7,8,9,10,11]' ><p class="vertical">{{elementosUsuario[num].nombreelemento}}</p></th>
           </tr>
         </thead>
         <tbody>
