--- a/frontendTFM/src/app/user2/user2.component.html
+++ b/frontendTFM/src/app/user2/user2.component.html
@@ -22,7 +22,8 @@
 
 
 <div *ngIf="bMostrarListaRejillas">
-   <div id="inicio">
+   <app-mostrar-rejillas [listaUsuarios]="this.listaUsuarios" [bIsAdmin]="false"></app-mostrar-rejillas>
+   <!-- <div id="inicio">
       <h1>Resultado Evaluaciones</h1>
       <label>Lista de Rejillas</label>
       <div *ngFor="let info of resultadoRejillas; let indice=index">
@@ -30,42 +31,33 @@
             <button type="button" (click)="nuevaEvaluacionRejilla(info.idrejilla, info.elementos, info.constructos)"
                id="nuevaEvaluacionRejilla" class="btn btn-dark">Nueva evaluación</button>
             <mat-icon (click)=toggleDisplay(info.idrejilla) class="mat-icon-rtl-mirror">{{info.idrejilla}}
-               {{info.isShow ? 'chevron_right' : 'expand_more'}}
-            </mat-icon>
+               {{info.isShow ? 'chevron_right' : 'expand_more'}}</mat-icon>
          </p>
 
          <div id="segundaRama" [hidden]="info.isShow">
             <p id="resumen">Resumen rejilla</p>
+            <p class="elementoResumen">Fecha Inicio: {{info.fechahora}}</p>
+            <p class="elementoResumen">Fecha Finalización: {{info.fechahorafin}}</p>
             <p class="elementoResumen">Elementos<mat-icon (click)=showElementos(info.idrejilla)
                   class="mat-icon-rtl-mirror">{{info.idrejilla}}
                   {{info.isShowElementos? 'chevron_right' : 'expand_more'}}
                </mat-icon>
             </p>
-            <div [hidden]="info.isShowElementos" *ngFor="let elemento of info.elementos">
-               <p class="resumen">Elemento</p>
-               <p class="resultadoResumen">Nombre Elemento:</p>
-               <p class="resultadoResumen">{{elemento.nombreelemento}}</p>
-               <p class="resultadoResumen">Rol Elemento:</p>
-               <p class="resultadoResumen">{{elemento.rolelemento}}</p>
+            <div [hidden]="info.isShowElementos" *ngFor="let elemento of info.elementos; let indice2=index">
+               <p class="resumen">Elemento {{indice2}}</p>
+               <p class="resultadoResumen">Nombre elemento: {{elemento.nombreelemento}}</p>
+               <p class="resultadoResumen">Rol elemento: {{elemento.rolelemento}}</p>
             </div>
             <p class="elementoResumen">Constructos <mat-icon (click)=showConstructos(info.idrejilla)
                   class="mat-icon-rtl-mirror">{{info.idrejilla}}
                   {{info.isShowConstructos ? 'chevron_right' : 'expand_more'}} </mat-icon>
             </p>
             <div [hidden]="info.isShowConstructos" *ngFor="let constructo of info.constructos">
-               <p class="resultadoResumen">Constructo</p>
-               <p class="resultadoResumen">{{constructo.idconstructo}}</p>
-               <p class="resultadoResumen">Polo izquierdo</p>
-               <p class="resultadoResumen">{{constructo.txtpoloizq}}</p>
-               <p class="resultadoResumen">Polo derecho</p>
-               <p class="resultadoResumen">{{constructo.txtpoloder}}</p>
+               <p class="resultadoResumen">Constructo {{constructo.idconstructo}}</p>
+               <p class="resultadoResumen">Polo izquierdo: {{constructo.txtpoloizq}}</p>
+               <p class="resultadoResumen">Polo derecho: {{constructo.txtpoloder}}</p>
             </div>
-            <p class="elementoResumen">Fecha Inicio</p>
-            <p class="resultadoResumen">{{info.fechahora}}</p>
-            <p class="elementoResumen">Fecha Finalización</p>
-            <p class="resultadoResumen">{{info.fechahorafin}}</p>
-            <p class="elementoResumen">Comentario </p>
-            <p class="resultadoResumen">{{info.comentariopaciente}}</p>
+            <p class="elementoResumen">Comentarios: {{info.comentariopaciente}}</p>
             <p class="elementoResumen">Evaluaciones </p>
             <div *ngFor="let evaluacion of info.evaluaciones; let indiceEvaluaciones=index">
                <p (click)=showRejillaCompleta(indiceEvaluaciones,indice) class="resultadoResumen">
@@ -77,7 +69,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
 </div>
 
 
