Nueva rejilla y mostrar puntuaciones solucionado

--- a/frontendTFM/src/app/mostrar-rejillas/mostrar-rejillas.component.html
+++ b/frontendTFM/src/app/mostrar-rejillas/mostrar-rejillas.component.html
@@ -64,7 +64,7 @@
 </div>
 
 <div *ngIf="bPuntuarRejilla">
-    <app-puntuar-rejilla></app-puntuar-rejilla>
+    <app-puntuar-rejilla (emitterOutputComponente)="obtenerSalidaPuntuarRejillaComponent($event)"></app-puntuar-rejilla>
 </div>
 
 
