Código backend limpio y comentado

--- a/frontendTFM/src/app/menu/menu.component.html
+++ b/frontendTFM/src/app/menu/menu.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="authority === 'admin'">
-  <app-admin></app-admin>
+   <app-pagina-psicologo></app-pagina-psicologo>
 </div>
 
 <div *ngIf="authority === 'user'">
-  <!-- <app-user></app-user> -->
-  <app-user2></app-user2>
+   <app-pagina-paciente></app-pagina-paciente>
 </div>
